--- a/server/services/emailTemplates/newsletter.html
+++ b/server/services/emailTemplates/newsletter.html
@@ -21,7 +21,7 @@
           {{{content}}}
         </div>
         <div class="footer">
-          <p>© 2025 Gifted Giving. All rights reserved.</p>
+          <p>© 2025 Gifted givings. All rights reserved.</p>
           <p>To unsubscribe, reply to this email with "UNSUBSCRIBE" in the subject line.</p>
         </div>
       </div>
