--- a/server/services/emailTemplates/password-reset.html
+++ b/server/services/emailTemplates/password-reset.html
@@ -20,7 +20,7 @@
         </div>
         <div class="content">
           <h2>Hello!</h2>
-          <p>We received a request to reset your password for your Gifted Giving account.</p>
+          <p>We received a request to reset your password for your Gifted givings account.</p>
           <p style="text-align: center; margin: 30px 0;">
             <a href="{{resetUrl}}" class="button">Reset Password</a>
           </p>
@@ -28,7 +28,7 @@
           <p>If you didn't request this password reset, please ignore this email.</p>
         </div>
         <div class="footer">
-          <p>© 2025 Gifted Giving. All rights reserved.</p>
+          <p>© 2025 Gifted givings. All rights reserved.</p>
         </div>
       </div>
     </body>
