--- a/server/services/emailTemplates/volunteer-application.html
+++ b/server/services/emailTemplates/volunteer-application.html
@@ -19,7 +19,7 @@
         </div>
         <div class="content">
           <h2>Hello {{firstName}}!</h2>
-          <p>Thank you for your interest in volunteering with Gifted Giving!</p>
+          <p>Thank you for your interest in volunteering with Gifted givings!</p>
           <p>We have received your application and will review it carefully. Here's what happens next:</p>
           <ol>
             <li>Our team will review your application within 3-5 business days</li>
@@ -35,7 +35,7 @@
           <p>We appreciate your commitment to making a difference in children's lives!</p>
         </div>
         <div class="footer">
-          <p>© 2025 Gifted Giving. All rights reserved.</p>
+          <p>© 2025 Gifted givings. All rights reserved.</p>
           <p>Questions? Contact us at giftedhands1256@gmail.com</p>
         </div>
       </div>
