--- a/server/services/emailTemplates/donation-confirmation.html
+++ b/server/services/emailTemplates/donation-confirmation.html
@@ -31,7 +31,7 @@
       <p>You can view your donation history and track your impact in your dashboard.</p>
     </div>
     <div class="footer">
-      <p>© 2025 Gifted Giving. All rights reserved.</p>
+      <p>© 2025 Gifted givings. All rights reserved.</p>
       <p>123 Buganda Road, Kampala, Uganda</p>
     </div>
   </div>
