--- a/server/services/emailTemplates/newsletter-welcome.html
+++ b/server/services/emailTemplates/newsletter-welcome.html
@@ -29,7 +29,7 @@
           <p>We're excited to keep you informed about how your support is making a real difference in children's lives.</p>
         </div>
         <div class="footer">
-          <p>© 2025 Gifted Giving. All rights reserved.</p>
+          <p>© 2025 Gifted givings. All rights reserved.</p>
           <p>To unsubscribe, reply to this email with "UNSUBSCRIBE" in the subject line.</p>
         </div>
       </div>
