--- a/server/services/emailTemplates/welcome.html
+++ b/server/services/emailTemplates/welcome.html
@@ -3,7 +3,7 @@
     <html>
     <head>
       <meta charset="utf-8">
-      <title>Welcome to Gifted Giving</title>
+      <title>Welcome to Gifted givings</title>
       <style>
         body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
         .container { max-width: 600px; margin: 0 auto; padding: 20px; }
@@ -16,7 +16,7 @@
     <body>
       <div class="container">
         <div class="header">
-          <h1>Welcome to Gifted Giving!</h1>
+          <h1>Welcome to Gifted givings!</h1>
         </div>
         <div class="content">
           <h2>Hello {{firstName}}!</h2>
@@ -34,7 +34,7 @@
           <p>If you have any questions, feel free to reach out to us at giftedhands1256@gmail.com</p>
         </div>
         <div class="footer">
-          <p>© 2025 Gifted Giving. All rights reserved.</p>
+          <p>© 2025 Gifted givings. All rights reserved.</p>
           <p>123 Buganda Road, Kampala, Uganda</p>
         </div>
       </div>
