--- a/server/services/emailTemplates/welcome.html
+++ b/server/services/emailTemplates/welcome.html
@@ -9,7 +9,7 @@
         .container { max-width: 600px; margin: 0 auto; padding: 20px; }
         .header { background: #01371f; color: white; padding: 30px; text-align: center; }
         .content { padding: 30px; background: #f9f9f9; }
-        .button { display: inline-block; padding: 12px 24px; background: #00ff8c; color: #01371f; text-decoration: none; border-radius: 5px; font-weight: bold; }
+        .button { display: inline-block; padding: 12px 24px; background: #01371f; color: #01371f; text-decoration: none; border-radius: 5px; font-weight: bold; }
         .footer { text-align: center; padding: 20px; color: #666; font-size: 14px; }
       </style>
     </head>
@@ -31,11 +31,11 @@
           <p style="text-align: center; margin: 30px 0;">
             <a href="{{dashboardUrl}}" class="button">Visit Your Dashboard</a>
           </p>
-          <p>If you have any questions, feel free to reach out to us at giftedhands1256@gmail.com</p>
+          <p>If you have any questions, feel free to reach out to us at forest13hils@gmail.com</p>
         </div>
         <div class="footer">
           <p>© 2025 Gifted givings. All rights reserved.</p>
-          <p>123 Buganda Road, Kampala, Uganda</p>
+          <p>50 Camden st, Methuen, MA 01844</p>
         </div>
       </div>
     </body>
